2008-12-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Escaped '--' with '\--'
	* README
	
2008-12-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated "How to build" section in README. Mentioned about
	--with-ca-bundle compile option.
	* README

2008-12-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Bump up version number to 1.1.0.
	* configure.ac

2008-12-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added a note for --dht-listen-port option.
	* doc/aria2c.1.txt

2008-12-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Update doc for --realtime-chunk-checksum option.
	* doc/aria2c.1.txt

2008-12-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Update doc for --realtime-chunk-checksum option.
	* src/usage_text.h

2008-12-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated French, Japanese, Russian and Ukrainian translations.
	Thanks to all translators.
	* po/fr.po
	* po/ja.po
	* po/ru.po
	* po/uk.po

2008-12-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed aria2c.pot to aria2.pot
	* po/aria2.pot
	* po/aria2c.pot: Removed.

2008-12-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed MetaEntry.h
	* src/Makefile.am

2008-12-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Rename file by appending digits if a local file exists and its
	file size is larger than that of remote file with --continue
	option. The old implementation just throws exception in such case.
	* src/RequestGroup.cc

2008-12-16  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that download progress summary is not printed in the
	interval specified by the option.
	* src/ConsoleStatCalc.cc
	* src/ConsoleStatCalc.h
	
2008-12-16  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compiler warning
	* src/Cookie.cc

2008-12-16  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
